# XML::FeedPP Changes

2011/05/08 (0.43)
    * fixed #67268: Wrong return value of description() with xhtml content in atom feeds
      https://rt.cpan.org/Ticket/Display.html?id=67268
      (thanks to MDOM)

2010/10/31 (0.42)
    * fixed #55197: Not a HASH reference at XML/FeedPP.pm line 2260
      https://rt.cpan.org/Ticket/Display.html?id=55197
      (thanks to MDOM)

2009/11/21 (0.41)
    * supports generating CDATA section by setting SCALAR ref value like XML::TreePP.
      (thanks to Mario Domgoergen)
    * pod added to create an empty Atom 1.0 instance intended:
      XML::FeedPP::Atom::Atom10->new() 
      (thanks to Andy Piper)

2009/04/07 (0.40)
    * fixed #44082: parse method refuses feeds with UTF-8 BOM
      http://rt.cpan.org/Public/Bug/Display.html?id=44082
      (thanks to haarg)
    * supports to get attributes in multiple elements determinably.
      See 36_get_multiple.t
    * new() and load() methods accept -type argument to specify source type.
      http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=504143
      (thanks to Anthony DeRobertis)
    * to_string() and to_file() methods accept options for XML::TreePP.

2009/03/12 (0.38)
    * fixed #36270: supports no XMLDecl on load() method
      https://rt.cpan.org/Ticket/Display.html?id=36270
      (thanks to hirsch)
    * supports category element which has type="" or domain="" attribute
      ex. http://thesteampunkhome.blogspot.com/feeds/posts/default
      http://weather.livedoor.com/forecast/rss/index.xml
      http://picasaweb.google.com/data/feed/base/user/www.kawa.net/?alt=rss
      (thanks to greg, tsubok and t-saitoh)

2009/01/18 (0.37)
    * fixed #42472: items with 2 titles break the parser
      (thanks to thaabit)
      http://rt.cpan.org/Public/Bug/Display.html?id=42472
    * fixed #41771: possible bug in $item->guid
      (thanks to PriggeScottM)
      http://rt.cpan.org/Public/Bug/Display.html?id=41771

2008/10/26 (0.36)
    * RFC1123 and RSS spec allow two-digit date format