@@ -420,7 +420,7 @@ use vars qw(
     $XMLNS_ATOM10
 );
 
-$VERSION = "0.43";
+$VERSION = "0.45_01";
 
 $RSS20_VERSION  = '2.0';
 $ATOM03_VERSION = '0.3';
@@ -479,44 +479,48 @@ sub new {
     my( $init, $source, @rest ) = &XML::FeedPP::Util::param_even_odd(@_);
     Carp::croak "No feed source" unless defined $source;
 
-    my $self  = {};
+    my $self = {};
     bless $self, $package;
     $self->load($source, @rest);
 
-    if ( exists $self->{rss} ) {
-        XML::FeedPP::RSS->feed_bless($self);
+    my $class = $self->detect_format;
+    unless ( $class ) {
+        my $root = ref $self ? join( " ", sort keys %$self ) : $self;
+        my $class = ref $self ? ref $self : $self;
+        Carp::croak "Invalid $class feed format: $root";
     }
-    elsif ( exists $self->{'rdf:RDF'} ) {
-        XML::FeedPP::RDF->feed_bless($self);
-    }
-    elsif ( exists $self->{feed} ) {
-        my $xmlns = $self->{feed}->{-xmlns} if exists $self->{feed}->{-xmlns};
-        if ( $xmlns eq $XMLNS_ATOM10 ) {
-            XML::FeedPP::Atom::Atom10->feed_bless($self);
-        }
-        elsif ( $xmlns eq $XMLNS_ATOM03 ) {
-            XML::FeedPP::Atom::Atom03->feed_bless($self);
-        }
-        else {
-            XML::FeedPP::Atom->feed_bless($self);
-        }
-    }
-    else {
-        my $root = join( " ", sort keys %$self );
-        Carp::croak "Invalid feed format: $root";
-    }
+    bless $self, $class;
 
-    $self->validate_feed($source);
+    $self->validate_feed();
     $self->init_feed();
     $self->elements(@$init) if ref $init;
     $self;
 }
 
-sub feed_bless {
-    my $package = shift;
-    my $self    = shift;
-    bless $self, $package;
-    $self;
+sub validate_feed {
+    my $self = shift;
+    return if $self->test_feed(@_);
+    my $root = ref $self ? join( " ", sort keys %$self ) : $self;
+    my $class = ref $self ? ref $self : $self;
+    Carp::croak "Invalid $class feed format: $root";
+}
+
+sub detect_format {
+    my $self = shift;
+    my $list = $self->available_format;
+    foreach my $class ( @$list ) {
+        my $hit = $class->test_feed($self);
+       return $class if $hit;
+    }
+    undef;
+}
+
+sub available_format {
+    [ 'XML::FeedPP::RSS',
+      'XML::FeedPP::RDF',
+      'XML::FeedPP::Atom::Atom10',
+      'XML::FeedPP::Atom::Atom03',
+      'XML::FeedPP::Atom' ];
 }
 
 sub load {
@@ -586,7 +590,7 @@ sub to_file {
 sub merge {
     my $self   = shift;
     my $source = shift;
-    my $target = ref $source ? $source : XML::FeedPP->new($source);
+    my $target = ref $source ? $source : XML::FeedPP->new($source, @_);
     $self->merge_channel($target);
     $self->merge_item($target);
     $self->normalize();
@@ -815,6 +819,50 @@ sub match_item {
     @$out;
 }
 
+sub channel_class { Carp::croak((ref $_[0])."->channel_class() is not implemented"); }
+sub item_class { Carp::croak((ref $_[0])."->item_class() is not implemented"); }
+sub test_feed { Carp::croak((ref $_[0])."->test_feed() is not implemented"); }
+sub init_feed { Carp::croak((ref $_[0])."->init_feed() is not implemented"); }
+sub add_item { Carp::croak((ref $_[0])."->add_item() is not implemented"); }
+sub clear_item { Carp::croak((ref $_[0])."->clear_item() is not implemented"); }
+sub remove_item { Carp::croak((ref $_[0])."->remove_item() is not implemented"); }
+sub get_item { Carp::croak((ref $_[0])."->get_item() is not implemented"); }
+sub sort_item { Carp::croak((ref $_[0])."->sort_item() is not implemented"); }
+sub uniq_item { Carp::croak((ref $_[0])."->uniq_item() is not implemented"); }
+sub limit_item { Carp::croak((ref $_[0])."->limit_item() is not implemented"); }
+sub docroot { Carp::croak((ref $_[0])."->docroot() is not implemented"); }
+sub channel { Carp::croak((ref $_[0])."->channel() is not implemented"); }
+sub set { Carp::croak((ref $_[0])."->set() is not implemented"); }
+sub get { Carp::croak((ref $_[0])."->get() is not implemented"); }
+sub title { Carp::croak((ref $_[0])."->title() is not implemented"); }
+sub description { Carp::croak((ref $_[0])."->description() is not implemented"); }
+sub link { Carp::croak((ref $_[0])."->link() is not implemented"); }
+sub language { Carp::croak((ref $_[0])."->language() is not implemented"); }
+sub copyright { Carp::croak((ref $_[0])."->copyright() is not implemented"); }
+sub pubDate { Carp::croak((ref $_[0])."->pubDate() is not implemented"); }
+sub image { Carp::croak((ref $_[0])."->image() is not implemented"); }
+
+# ----------------------------------------------------------------
+package XML::FeedPP::Common;
+use strict;
+use vars qw( @ISA );
+@ISA = qw( XML::FeedPP );
+
+sub new {
+    my $package = shift;
+    my( $init, $source, @rest ) = &XML::FeedPP::Util::param_even_odd(@_);
+
+    my $self = {};
+    bless $self, $package;
+    if ( defined $source ) {
+        $self->load($source, @rest);
+        $self->validate_feed();
+    }
+    $self->init_feed();
+    $self->elements(@$init) if ref $init;
+    $self;
+}
+
 # ----------------------------------------------------------------
 package XML::FeedPP::Plugin;
 use strict;
@@ -854,22 +902,7 @@ sub elements {
 package XML::FeedPP::RSS;
 use strict;
 use vars qw( @ISA );
-@ISA = qw( XML::FeedPP );
-
-sub new {
-    my $package = shift;
-    my( $init, $source, @rest ) = &XML::FeedPP::Util::param_even_odd(@_);
-
-    my $self    = {};
-    bless $self, $package;
-    if ( defined $source ) {
-        $self->load($source, @rest);
-        $self->validate_feed($source);
-    }
-    $self->init_feed();
-    $self->elements(@$init) if ref $init;
-    $self;
-}
+@ISA = qw( XML::FeedPP::Common );
 
 sub channel_class {
     'XML::FeedPP::RSS::Channel';
@@ -879,12 +912,12 @@ sub item_class {
     'XML::FeedPP::RSS::Item';
 }
 
-sub validate_feed {
+sub test_feed {
     my $self   = shift;
     my $source = shift || $self;
-    if ( !ref $self || !ref $self->{rss} ) {
-        Carp::croak "Invalid RSS format: $source";
-    }
+    return unless ref $source;
+    return unless ref $source->{rss};
+    __PACKAGE__;
 }
 
 sub init_feed {
@@ -892,7 +925,7 @@ sub init_feed {
 
     $self->{rss} ||= {};
     if ( ! UNIVERSAL::isa( $self->{rss}, 'HASH' ) ) {
-        Carp::croak "Invalid RSS format: $self->{rss}";
+        Carp::croak "Invalid RSS 2.0 feed format: $self->{rss}";
     }
     $self->{rss}->{'-version'} ||= $XML::FeedPP::RSS20_VERSION;
 
@@ -1155,22 +1188,7 @@ sub image {
 package XML::FeedPP::RDF;
 use strict;
 use vars qw( @ISA );
-@ISA = qw( XML::FeedPP );
-
-sub new {
-    my $package = shift;
-    my( $init, $source, @rest ) = &XML::FeedPP::Util::param_even_odd(@_);
-
-    my $self    = {};
-    bless $self, $package;
-    if ( defined $source ) {
-        $self->load($source, @rest);
-        $self->validate_feed($source);
-    }
-    $self->init_feed();
-    $self->elements(@$init) if ref $init;
-    $self;
-}
+@ISA = qw( XML::FeedPP::Common );
 
 sub channel_class {
     'XML::FeedPP::RDF::Channel';
@@ -1180,19 +1198,20 @@ sub item_class {
     'XML::FeedPP::RDF::Item';
 }
 
-sub validate_feed {
+sub test_feed {
     my $self   = shift;
     my $source = shift || $self;
-    if ( !ref $self || !ref $self->{'rdf:RDF'} ) {
-        Carp::croak "Invalid RDF format: $source";
-    }
+    return unless ref $source;
+    return unless ref $source->{'rdf:RDF'};
+    __PACKAGE__;
 }
+
 sub init_feed {
     my $self = shift or return;
 
     $self->{'rdf:RDF'} ||= {};
     if ( ! UNIVERSAL::isa( $self->{'rdf:RDF'}, 'HASH' ) ) {
-        Carp::croak "Invalid RDF format: $self->{'rdf:RDF'}";
+        Carp::croak "Invalid RDF 1.0 feed format: $self->{'rdf:RDF'}";
     }
     $self->xmlns( 'xmlns'     => $XML::FeedPP::XMLNS_RSS );
     $self->xmlns( 'xmlns:rdf' => $XML::FeedPP::XMLNS_RDF );
@@ -1474,30 +1493,7 @@ sub get_pubDate_native {
 package XML::FeedPP::Atom::Common;
 use strict;
 use vars qw( @ISA );
-@ISA = qw( XML::FeedPP );
-
-sub new {
-    my $package = shift;
-    my( $init, $source, @rest ) = &XML::FeedPP::Util::param_even_odd(@_);
-
-    my $self    = {};
-    bless $self, $package;
-    if ( defined $source ) {
-        $self->load($source, @rest);
-        $self->validate_feed($source);
-    }
-    $self->init_feed();
-    $self->elements(@$init) if ref $init;
-    $self;
-}
-
-sub validate_feed {
-    my $self   = shift;
-    my $source = shift || $self;
-    if ( !ref $self || !ref $self->{feed} ) {
-        Carp::croak "Invalid Atom format: $source";
-    }
-}
+@ISA = qw( XML::FeedPP::Common );
 
 sub merge_native_channel {
     my $self = shift;
@@ -1674,6 +1670,17 @@ sub item_class {
     'XML::FeedPP::Atom::Atom03::Entry';
 }
 
+sub test_feed {
+    my $self   = shift;
+    my $source = shift || $self;
+    return unless ref $source;
+    return unless ref $source->{feed};
+    return unless exists $source->{feed}->{-xmlns};
+    my $xmlns = $source->{feed}->{-xmlns};
+    return if ($xmlns ne $XML::FeedPP::XMLNS_ATOM03);
+    __PACKAGE__;
+}
+
 sub init_feed {
     my $self = shift or return;
 
@@ -1681,7 +1688,7 @@ sub init_feed {
     $self->channel_class->ref_bless( $self->{feed} );
 
     if ( ! UNIVERSAL::isa( $self->{feed}, 'HASH' ) ) {
-        Carp::croak "Invalid Atom 0.3 format: $self->{feed}";
+        Carp::croak "Invalid Atom 0.3 feed format: $self->{feed}";
     }
 
     $self->xmlns( 'xmlns' => $XML::FeedPP::XMLNS_ATOM03 );
@@ -1795,6 +1802,17 @@ sub item_class {
     'XML::FeedPP::Atom::Atom10::Entry';
 }
 
+sub test_feed {
+    my $self   = shift;
+    my $source = shift || $self;
+    return unless ref $source;
+    return unless ref $source->{feed};
+    return unless exists $source->{feed}->{-xmlns};
+    my $xmlns = $source->{feed}->{-xmlns};
+    return if ($xmlns ne $XML::FeedPP::XMLNS_ATOM10);
+    __PACKAGE__;
+}
+
 sub init_feed {
     my $self = shift or return;
 
@@ -1802,7 +1820,7 @@ sub init_feed {
     $self->channel_class->ref_bless( $self->{feed} );
 
     if ( ! UNIVERSAL::isa( $self->{feed}, 'HASH' ) ) {
-        Carp::croak "Invalid Atom 1.0 format: $self->{feed}";
+        Carp::croak "Invalid Atom 1.0 feed format: $self->{feed}";
     }
 
     $self->xmlns( 'xmlns' => $XML::FeedPP::XMLNS_ATOM10 );
@@ -1907,6 +1925,14 @@ use vars qw( @ISA );
 @ISA = qw( XML::FeedPP::Atom::Atom03 );
 
 # @ISA = qw( XML::FeedPP::Atom::Atom10 );   # if Atom 1.0 for default
+
+sub test_feed {
+    my $self   = shift;
+    my $source = shift || $self;
+    return unless ref $source;
+    return unless ref $source->{feed};
+    __PACKAGE__;
+}
 
 # ----------------------------------------------------------------
 package XML::FeedPP::Atom::Common::Feed;
